mobile responsiveness done

--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -9,8 +9,7 @@
 
   @media only screen and (max-width: 768px) {
     padding-top: 150px;
-    background-image: unset;
-    background: #0F051B;
+    background-image: url('About-Us__asset-mb-bg-v01.jpg');
   }
 
   @media only screen and (max-width: 480px) {
@@ -474,16 +473,18 @@
   background-size: cover;
   position: relative;
   height: 1900px;
+  padding-bottom: 0px;
   // height: 1816px;
 
-  @media only screen and (max-width: 1080px) {
-    background-size: contain;
-  }
-
   @media only screen and (max-width: 768px) {
-    background-image: url('About-Us__asset-mb-bg-v02.png');
+    background-image: url('About-Us__asset-mb-bg-v02.jpg');
     height:1335px;
     background-size: cover;
+  }
+
+  @media only screen and (max-width: 480px) {
+    height:1563px;
+    padding-bottom: unset;
   }
 
   .db-background-overlay {
@@ -500,13 +501,8 @@
     right: 0;
     z-index: -1;
 
-    @media only screen and (max-width: 1080px) {
-      background-size: contain;
-      background-position: bottom;
-    }
-
     @media only screen and (max-width: 768px) {
-      height: 500px;
+      // height: 500px;
       display: none;
     }
   }
@@ -646,6 +642,7 @@
 
           @media only screen and (max-width: 1080px) {
             margin-top: 420px;
+            background-color: #0F051B;
           }
 
           @media only screen and (max-width: 768px) {
@@ -783,14 +780,33 @@
                   background: rgba(0, 0, 0, 0.20);
                 }
                 
-                &:nth-child(3n) {
+
+                &.firstNative {
                   .card-wrapper {
                     .db-natives-image-container {
-                      left: 0;
+                      left: -20px;
+                      bottom: -15px;
                     }
                   }
                 }
 
+                &.secondNative {
+                  .card-wrapper {
+                    .db-natives-image-container {
+                      left: -20px;
+                      bottom: -15px;
+                    }
+                  }
+                }
+
+                &.thirdNative {
+                  .card-wrapper {
+                    .db-natives-image-container {
+                      left: 5px;
+                      bottom: -15px;
+                    }
+                  }
+                }
                 .card-wrapper {
                   padding-top: 75px;
                   padding-right: 25px;
@@ -845,23 +861,24 @@
                       left: -15px;
                     }
                       img {
+                        display: block;
                         width: 100%;
                         object-fit: cover;
                         height: 100%;
 
-                        &:nth-child(1) {
-                          display: block;
-                          @media only screen and (max-width: 768px) {
-                            display: none;
-                          }
-                        }
+                        // &:nth-child(1) {
+                        //   display: block;
+                        //   @media only screen and (max-width: 768px) {
+                        //     display: none;
+                        //   }
+                        // }
 
-                        &:nth-child(2) {
-                          display: none;
-                          @media only screen and (max-width: 768px) {
-                            display: block;
-                          }
-                        }
+                        // &:nth-child(2) {
+                        //   display: none;
+                        //   @media only screen and (max-width: 768px) {
+                        //     display: block;
+                        //   }
+                        // }
                       }             
                   }
 
@@ -969,10 +986,24 @@
   @media only screen and (max-width: 768px) {
     display: block;
   }
+
+  @media only screen and (max-width: 480px) {
+    padding-top: unset;
+    padding-left: 14px;
+  }
+
   .db-container {
     .db-row {
       flex-direction: column;
       row-gap: 70px;
+
+      @media only screen and (max-width: 768px) {
+        row-gap: 20px;
+      }
+
+      @media only screen and (max-width: 480px) {
+        row-gap: unset;
+      }
       .db-the-natives-title {
         text-align: center;
         margin-inline: auto;
@@ -1018,217 +1049,191 @@
         }
       }
 
-      .wrapper {
+      .slider {
+        width: max-content;
+        margin-inline: auto;
+        max-width: 315px;
         width: 100%;
-        position: relative;
-        @media only screen and (max-width: 768px) {
-          // height: 870px;
-          height: 875px;
-          // height: 845px;
-          // height: 924px;
+        min-width: 315px;
+
+         @media only screen and (max-width: 768px) {
+          margin-top: 100px;
         }
+        .slider-container {
+          display: flex;
+          position: relative;
+          height: 890px;
+          padding-top: 20px;
+          overflow: hidden;
 
-        .carousel {
-              display: grid;
-              grid-auto-columns: calc((100% / 3.2));
-              grid-template-rows: 367px;
-              column-gap: 44px;
-              overflow-x:hidden;
-              grid-auto-flow: column;
-              scroll-snap-type: x mandatory;
-              scroll-behavior: smooth;
-              scrollbar-width: none;
+          .slide {
+            position: absolute;
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+            max-width: 315px;
+            width: 100%;
+            min-width: 315px;
+            display: flex;
+            flex-direction: column;
+            row-gap: 40px;
 
-              @media only screen and (max-width: 1440px) {
-                max-width: 1000px;
-                grid-auto-columns: calc((100% / 2.1));
-                margin-inline: auto;
-              }
+            &.active {
+              opacity: 1;
+              transform: translateX(0); 
+            }
 
-              @media only screen and (max-width: 1080px) {
-                max-width: 500px;
-                grid-auto-columns: calc((100% / 1));
-              }
+            &.next {
+              transform: translateX(100%);
+            }
 
-              @media only screen and (max-width: 768px) {
-                width: max-content;
-                margin-inline: auto;
-                grid-auto-flow: row;
-                grid-auto-columns: unset;
-                grid-template-columns: 315px;
-                grid-template-rows: 255px;
-                padding-top: 60px;
-                row-gap:40px;
-                height: 100%;
-                // height: 860px;
-                overflow-y: auto;
-                overflow-x: unset;
-                scroll-snap-type: y mandatory;
-              }
+            &.last {
+              transform: translateX(-100%);
+            }
+
+            .native-card {
+              border-radius: 28.669px;
+              border: 1.108px solid rgba(62, 62, 62, 0.40);
+              background: rgba(0, 0, 0, 0.20);
+              transition: transform 0.1s linear;
 
               @media only screen and (max-width: 480px) {
-                margin-top: 34px;
-              }
-
-              &::-webkit-scrollbar {
-                display: none;
-              }
-
-              &.no-transition {
-                scroll-behavior: auto;
-              }
-
-              &.dragging {
-                scroll-snap-type: none;
-                scroll-behavior: auto;
-
-                .native-card {
-                  cursor: grab;
-                  user-select: none;
-                }
-              }
-
-              
-              .native-card {
-                border-radius: 28.669px;
-                border: 1.108px solid rgba(62, 62, 62, 0.40);
+                border-radius: 19.922px;
+                border: 0.77px solid rgba(62, 62, 62, 0.40);
                 background: rgba(0, 0, 0, 0.20);
-                transition: transform 0.1s linear;
+              }
 
-                @media only screen and (max-width: 480px) {
-                  border-radius: 19.922px;
-                  border: 0.77px solid rgba(62, 62, 62, 0.40);
-                  background: rgba(0, 0, 0, 0.20);
-                }
-                
-                &:nth-child(3n) {
-                  .card-wrapper {
-                    .db-natives-image-container {
-                      left: 0;
-                    }
+              &.firstNative {
+                .card-wrapper {
+                  .db-natives-image-container {
+                    left: -20px;
+                    bottom: -11px;
                   }
                 }
+              }
 
+              &.secondNative {
                 .card-wrapper {
-                  padding-top: 75px;
-                  padding-right: 25px;
-                  padding-bottom: 76px;
-                  display: flex;
-                  flex-direction: column;
-                  align-items: flex-end;
-                  position: relative;
-                  height: 100%;
+                  .db-natives-image-container {
+                    left: -20px;
+                    bottom: -11px;
+                  }
+                }
+              }
+
+              &.thirdNative {
+                .card-wrapper {
+                  .db-natives-image-container {
+                    left: 0;
+                    bottom: -11px;
+                  }
+                }
+              }
+
+              .card-wrapper {
+                padding-top: 75px;
+                padding-right: 25px;
+                padding-bottom: 76px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: relative;
+
+                @media only screen and (max-width: 768px) {
+                  padding-top: 51px;
+                  padding-right: 19px;
+                  padding-bottom: 51px;
+                }
+
+                &::before {
+                  content:"";
+                  position: absolute;
+                  display: block;
+                  bottom:0;
+                  top:0;
+                  width: 136px;
+                  left:0;
+                  background-image: url('About-Us__asset-native-bg-v01.png');
+                  background-position: center;
+                  background-repeat: no-repeat;
+                  background-size: cover;
+                  object-fit: cover;
+                  border-top-left-radius: 28px;
+                  border-bottom-left-radius: 28px;
+                  overflow: hidden;
 
                   @media only screen and (max-width: 768px) {
-                    padding-top: 51px;
-                    padding-right: 19px;
-                    padding-bottom: 51px;
+                    width: 95px;
+                    background-image: url('About-Us__asset-mb-native-bg-v01.png');
                   }
 
-                  &::before {
-                    content:"";
-                    position: absolute;
-                    display: block;
-                    bottom:0;
-                    top:0;
-                    width: 136px;
-                    left:0;
-                    background-image: url('About-Us__asset-native-bg-v01.png');
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    object-fit: cover;
-                    border-top-left-radius: 28px;
-                    border-bottom-left-radius: 28px;
-                    overflow: hidden;
-
-                    @media only screen and (max-width: 768px) {
-                      width: 95px;
-                      background-image: url('About-Us__asset-mb-native-bg-v01.png');
-                    }
-
-                    @media only screen and (max-width: 480px) {
-                      border-top-left-radius: 19px;
-                      border-bottom-left-radius: 19px;
-                    }
-                  }
-
-                  .db-natives-image-container {
-                    position: absolute;
-                      left: -20px;
-                      bottom: -15px;
-
-                    @media only screen and (max-width: 768px) {
-                      bottom: -10px;
-                      left: -15px;
-                    }
-                      img {
-                        width: 100%;
-                        object-fit: cover;
-                        height: 100%;
-
-                        &:nth-child(1) {
-                          display: block;
-                          @media only screen and (max-width: 768px) {
-                            display: none;
-                          }
-                        }
-
-                        &:nth-child(2) {
-                          display: none;
-                          @media only screen and (max-width: 768px) {
-                            display: block;
-                          }
-                        }
-                      }             
-                  }
-
-                  .db-natives-profile {
-                    display: flex;
-                    flex-direction: column;
-                    max-width: 175px;
-                    row-gap: 19px;
-                    position: relative;
-                    z-index: 2;
-
-                    @media only screen and (max-width: 768px) {
-                      max-width: 133px;
-                    }
-
-                    .db-native-name {
-                      color: #FFF;
-                      font-family: $primaryFontFamily;
-                      font-size: 33.23px;
-                      font-style: normal;
-                      font-weight: 700;
-                      line-height: 115%; /* 38.215px */
-                      letter-spacing: -1.329px;
-
-                      @media only screen and (max-width: 768px) {
-                        font-size: 23.091px;
-                        letter-spacing: -0.924px;
-                      }
-                    }
-
-                    .db-native-description {
-                      color: #CAC7D0;
-                      font-family: $secondaryFontFamily;
-                      font-size: 13.292px;
-                      font-style: normal;
-                      font-weight: 400;
-                      line-height: 130%; /* 17.28px */
-                      letter-spacing: -0.532px;
-
-                      @media only screen and (max-width: 768px) {
-                        font-size: 9.237px;
-                        letter-spacing: -0.369px;
-                      }
-                    }
-
+                  @media only screen and (max-width: 480px) {
+                    border-top-left-radius: 19px;
+                    border-bottom-left-radius: 19px;
                   }
                 }
-                
+
+                .db-natives-image-container {
+                  position: absolute;
+                  left: -20px;
+                  bottom: -15px;
+
+                  @media only screen and (max-width: 768px) {
+                    bottom: -10px;
+                    left: -15px;
+                  }
+                  
+                  img {
+                    width: 100%;
+                    object-fit: cover;
+                    height: 100%;
+                  }
+                }
+
+                .db-natives-profile {
+                  display: flex;
+                  flex-direction: column;
+                  max-width: 175px;
+                  row-gap: 19px;
+                  position: relative;
+                  z-index: 2;
+
+                  @media only screen and (max-width: 768px) {
+                    max-width: 133px;
+                  }
+
+                  .db-native-name {
+                    color: #FFF;
+                    font-family: $primaryFontFamily;
+                    font-size: 33.23px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 115%; /* 38.215px */
+                    letter-spacing: -1.329px;
+
+                    @media only screen and (max-width: 768px) {
+                      font-size: 23.091px;
+                      letter-spacing: -0.924px;
+                    }
+                  }
+
+                  .db-native-description {
+                    color: #CAC7D0;
+                    font-family: $secondaryFontFamily;
+                    font-size: 13.292px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 130%; /* 17.28px */
+                    letter-spacing: -0.532px;
+
+                    @media only screen and (max-width: 768px) {
+                      font-size: 9.237px;
+                      letter-spacing: -0.369px;
+                    }
+                  }
+                }
               }
+            }
+          }
         }
       }
 
@@ -1239,6 +1244,12 @@
 
             @media only screen and (max-width: 1080px) {
               margin-top: 40px;
+            }
+
+            @media only screen and (max-width: 480px) {
+              margin-top: 70px;
+              margin-inline: unset;
+
             }
 
             .buttons {
@@ -1253,7 +1264,7 @@
               @media only screen and (max-width: 480px) {
                 justify-content: flex-end;
                 column-gap: 60px;
-                padding-right: 20px;
+                padding-right: 30px;
               }
 
               .svg-icon-prev, .svg-icon-next {
@@ -1273,7 +1284,7 @@
                 }
               }
             }
-          }
+      }
     }
   }
 }
