--- a/assets/theme.css
+++ b/assets/theme.css
@@ -643,8 +643,7 @@ ul, ol {
 @media only screen and (max-width: 768px) {
   .db-section--about-us-banner {
     padding-top: 150px;
-    background-image: unset;
-    background: #0F051B;
+    background-image: url("About-Us__asset-mb-bg-v01.jpg");
   }
 }
 @media only screen and (max-width: 480px) {
@@ -1100,17 +1099,19 @@ ul, ol {
   background-size: cover;
   position: relative;
   height: 1900px;
-}
-@media only screen and (max-width: 1080px) {
-  .db-section--about-us-after-life {
-    background-size: contain;
-  }
+  padding-bottom: 0px;
 }
 @media only screen and (max-width: 768px) {
   .db-section--about-us-after-life {
-    background-image: url("About-Us__asset-mb-bg-v02.png");
+    background-image: url("About-Us__asset-mb-bg-v02.jpg");
     height: 1335px;
     background-size: cover;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life {
+    height: 1563px;
+    padding-bottom: unset;
   }
 }
 .db-section--about-us-after-life .db-background-overlay {
@@ -1126,15 +1127,8 @@ ul, ol {
   right: 0;
   z-index: -1;
 }
-@media only screen and (max-width: 1080px) {
-  .db-section--about-us-after-life .db-background-overlay {
-    background-size: contain;
-    background-position: bottom;
-  }
-}
 @media only screen and (max-width: 768px) {
   .db-section--about-us-after-life .db-background-overlay {
-    height: 500px;
     display: none;
   }
 }
@@ -1277,6 +1271,7 @@ ul, ol {
 @media only screen and (max-width: 1080px) {
   .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
     margin-top: 420px;
+    background-color: #0F051B;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -1412,8 +1407,17 @@ ul, ol {
     background: rgba(0, 0, 0, 0.2);
   }
 }
-.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card:nth-child(3n) .card-wrapper .db-natives-image-container {
-  left: 0;
+.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.firstNative .card-wrapper .db-natives-image-container {
+  left: -20px;
+  bottom: -15px;
+}
+.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.secondNative .card-wrapper .db-natives-image-container {
+  left: -20px;
+  bottom: -15px;
+}
+.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.thirdNative .card-wrapper .db-natives-image-container {
+  left: 5px;
+  bottom: -15px;
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper {
   padding-top: 75px;
@@ -1473,25 +1477,10 @@ ul, ol {
   }
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img {
+  display: block;
   width: 100%;
   object-fit: cover;
   height: 100%;
-}
-.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(1) {
-  display: block;
-}
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(1) {
-    display: none;
-  }
-}
-.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(2) {
-  display: none;
-}
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(2) {
-    display: block;
-  }
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-profile {
   display: flex;
@@ -1588,9 +1577,25 @@ ul, ol {
     display: block;
   }
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-mb-slider {
+    padding-top: unset;
+    padding-left: 14px;
+  }
+}
 .db-section--about-us-mb-slider .db-container .db-row {
   flex-direction: column;
   row-gap: 70px;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-mb-slider .db-container .db-row {
+    row-gap: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-mb-slider .db-container .db-row {
+    row-gap: unset;
+  }
 }
 .db-section--about-us-mb-slider .db-container .db-row .db-the-natives-title {
   text-align: center;
@@ -1634,91 +1639,72 @@ ul, ol {
     font-size: 40px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper {
+.db-section--about-us-mb-slider .db-container .db-row .slider {
+  width: max-content;
+  margin-inline: auto;
+  max-width: 315px;
   width: 100%;
+  min-width: 315px;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-mb-slider .db-container .db-row .slider {
+    margin-top: 100px;
+  }
+}
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container {
+  display: flex;
   position: relative;
+  height: 890px;
+  padding-top: 20px;
+  overflow: hidden;
 }
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper {
-    height: 875px;
-  }
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide {
+  position: absolute;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  max-width: 315px;
+  width: 100%;
+  min-width: 315px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel {
-  display: grid;
-  grid-auto-columns: 31.25%;
-  grid-template-rows: 367px;
-  column-gap: 44px;
-  overflow-x: hidden;
-  grid-auto-flow: column;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide.active {
+  opacity: 1;
+  transform: translateX(0);
 }
-@media only screen and (max-width: 1440px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel {
-    max-width: 1000px;
-    grid-auto-columns: 47.619047619%;
-    margin-inline: auto;
-  }
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide.next {
+  transform: translateX(100%);
 }
-@media only screen and (max-width: 1080px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel {
-    max-width: 500px;
-    grid-auto-columns: 100%;
-  }
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide.last {
+  transform: translateX(-100%);
 }
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel {
-    width: max-content;
-    margin-inline: auto;
-    grid-auto-flow: row;
-    grid-auto-columns: unset;
-    grid-template-columns: 315px;
-    grid-template-rows: 255px;
-    padding-top: 60px;
-    row-gap: 40px;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: unset;
-    scroll-snap-type: y mandatory;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel {
-    margin-top: 34px;
-  }
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel::-webkit-scrollbar {
-  display: none;
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel.no-transition {
-  scroll-behavior: auto;
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel.dragging {
-  scroll-snap-type: none;
-  scroll-behavior: auto;
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel.dragging .native-card {
-  cursor: grab;
-  user-select: none;
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card {
   border-radius: 28.669px;
   border: 1.108px solid rgba(62, 62, 62, 0.4);
   background: rgba(0, 0, 0, 0.2);
   transition: transform 0.1s linear;
 }
 @media only screen and (max-width: 480px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card {
     border-radius: 19.922px;
     border: 0.77px solid rgba(62, 62, 62, 0.4);
     background: rgba(0, 0, 0, 0.2);
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card:nth-child(3n) .card-wrapper .db-natives-image-container {
-  left: 0;
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card.firstNative .card-wrapper .db-natives-image-container {
+  left: -20px;
+  bottom: -11px;
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card.secondNative .card-wrapper .db-natives-image-container {
+  left: -20px;
+  bottom: -11px;
+}
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card.thirdNative .card-wrapper .db-natives-image-container {
+  left: 0;
+  bottom: -11px;
+}
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper {
   padding-top: 75px;
   padding-right: 25px;
   padding-bottom: 76px;
@@ -1726,16 +1712,15 @@ ul, ol {
   flex-direction: column;
   align-items: flex-end;
   position: relative;
-  height: 100%;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper {
     padding-top: 51px;
     padding-right: 19px;
     padding-bottom: 51px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper::before {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper::before {
   content: "";
   position: absolute;
   display: block;
@@ -1753,50 +1738,34 @@ ul, ol {
   overflow: hidden;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper::before {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper::before {
     width: 95px;
     background-image: url("About-Us__asset-mb-native-bg-v01.png");
   }
 }
 @media only screen and (max-width: 480px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper::before {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper::before {
     border-top-left-radius: 19px;
     border-bottom-left-radius: 19px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-image-container {
   position: absolute;
   left: -20px;
   bottom: -15px;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-image-container {
     bottom: -10px;
     left: -15px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-image-container img {
   width: 100%;
   object-fit: cover;
   height: 100%;
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(1) {
-  display: block;
-}
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(1) {
-    display: none;
-  }
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(2) {
-  display: none;
-}
-@media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img:nth-child(2) {
-    display: block;
-  }
-}
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile {
   display: flex;
   flex-direction: column;
   max-width: 175px;
@@ -1805,11 +1774,11 @@ ul, ol {
   z-index: 2;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile {
     max-width: 133px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile .db-native-name {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile .db-native-name {
   color: #FFF;
   font-family: var(--primaryFontFamily);
   font-size: 33.23px;
@@ -1819,12 +1788,12 @@ ul, ol {
   letter-spacing: -1.329px;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile .db-native-name {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile .db-native-name {
     font-size: 23.091px;
     letter-spacing: -0.924px;
   }
 }
-.db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile .db-native-description {
+.db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile .db-native-description {
   color: #CAC7D0;
   font-family: var(--secondaryFontFamily);
   font-size: 13.292px;
@@ -1834,7 +1803,7 @@ ul, ol {
   letter-spacing: -0.532px;
 }
 @media only screen and (max-width: 768px) {
-  .db-section--about-us-mb-slider .db-container .db-row .wrapper .carousel .native-card .card-wrapper .db-natives-profile .db-native-description {
+  .db-section--about-us-mb-slider .db-container .db-row .slider .slider-container .slide .native-card .card-wrapper .db-natives-profile .db-native-description {
     font-size: 9.237px;
     letter-spacing: -0.369px;
   }
@@ -1847,6 +1816,12 @@ ul, ol {
 @media only screen and (max-width: 1080px) {
   .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider {
     margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider {
+    margin-top: 70px;
+    margin-inline: unset;
   }
 }
 .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider .buttons {
@@ -1863,7 +1838,7 @@ ul, ol {
   .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider .buttons {
     justify-content: flex-end;
     column-gap: 60px;
-    padding-right: 20px;
+    padding-right: 30px;
   }
 }
 .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider .buttons .svg-icon-prev, .db-section--about-us-mb-slider .db-container .db-row .db-buttons-slider .buttons .svg-icon-next {
