--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,4 +1,4 @@
-{% comment %} <footer class="db-footer site-footer">
+<footer class="db-footer site-footer">
   <section class="db-section db-section--newsletter">
     <div class="db-container">
       <div class="db-row">
@@ -108,4 +108,4 @@
       </p>
     </div>
   </section>
-</footer> {% endcomment %}
+</footer>
