--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -961,7 +961,7 @@
        onLoadAnimation() {
         console.log('onLoadAnimation');
         setTimeout(() => {
-          // document.querySelector('.db-site-loader').classList.remove('--show');
+          document.querySelector('.db-site-loader').classList.remove('--show');
           // document.querySelector('.db-section--banner').classList.add('--animate-now');
           document.querySelector('.db-header').classList.add('--animate-now');
         }, 3000);
