--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -13,7 +13,7 @@
   }
 
   @media only screen and (max-width: 480px) {
-    padding-top: 100px;
+    padding-top: 160px;
   }
 
   
@@ -114,6 +114,7 @@
         @media only screen and (max-width: 480px) {
           border-radius: 15px;
           border: 8px solid #242031;
+          margin-top: 74px;
         }
 
         .db-col-spacer {
@@ -656,7 +657,6 @@
           .db-the-natives-title {
             text-align: center;
             margin-inline: auto;
-            // margin-bottom: 91px;
             h3 {
               text-align: center;
               &:nth-child(1) {
@@ -736,7 +736,6 @@
                 grid-auto-flow: row;
                 grid-auto-columns: unset;
                 grid-template-columns: 315px;
-                // grid-template-rows: 270px;
                 grid-template-rows: 255px;
                 row-gap:40px;
                 height: 100%;
@@ -773,6 +772,7 @@
                 border: 1.108px solid rgba(62, 62, 62, 0.40);
                 background: rgba(0, 0, 0, 0.20);
                 transition: transform 0.1s linear;
+                scroll-snap-align: start;
 
                 @media only screen and (max-width: 480px) {
                   border-radius: 19.922px;
@@ -929,6 +929,18 @@
                 
               }
             }
+
+            .no-character-found {
+              color: #FFF;
+              text-align: center;
+              font-family: $primaryFontFamily;
+              font-size: 70px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%;
+              letter-spacing: -3.2px;
+              margin-top: 100px;
+            }
           }
 
           .db-buttons-slider {
@@ -1057,7 +1069,7 @@
         min-width: 315px;
 
          @media only screen and (max-width: 768px) {
-          margin-top: 100px;
+          margin-top: 62px;
         }
         .slider-container {
           display: flex;
@@ -1105,7 +1117,7 @@
               &.firstNative {
                 .card-wrapper {
                   .db-natives-image-container {
-                    left: -20px;
+                    left: -10px;
                     bottom: -11px;
                   }
                 }
@@ -1123,7 +1135,7 @@
               &.thirdNative {
                 .card-wrapper {
                   .db-natives-image-container {
-                    left: 0;
+                    left: 10px;
                     bottom: -11px;
                   }
                 }
@@ -1289,16 +1301,6 @@
   }
 }
 
-.db-section--spacer {
-  background-color: #0F051B;
-  height: 200px;
-  width: 100%;
-
-  @media only screen and (max-width: 1080px) {
-    height: 50px;
-  }
-}
-
 .db-section--about-us-resurrection {
   background-image: url('About-Us__asset-resurrection-bg-v01.png');
   background-position: 0px 0px;
@@ -1352,9 +1354,14 @@
               }
 
               &:nth-child(1) {
-                max-width: 362px;
-                height: 211px;
+                max-width: 518px;
+                width: 100%;
+                @media only screen and (max-width: 768px) {
+                  max-width: 362px;
+                }
+
               }
+
               &:nth-child(2) {
                 margin-top: 91px;
                 margin-left: auto;
@@ -1368,6 +1375,7 @@
                 @media only screen and (max-width: 768px) {
                   height: 167px;
                   max-width: 362px;
+                  width: 100%;
                 }
 
                 @media only screen and (max-width: 480px) {
